# screenshare

./: .gitattributes  .gitignore  Cargo.toml  Makefile  index.html  remarkable.mk
src/: endpoint.rs  imager.rs  index.html  main.rs  remarkable.rs  watch_fb.rs
toolchains/: codex-x86_64-cortexa7hf-neon-rm11x-toolchain-3.1.15.sh
