[package]
name = "screenshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lz-fear = "0.1.1"
sysinfo = "0.23.4"
clap = { version = "3.1.3", features = ["derive"] }
futures = "0.3.21"

#ffmpeg-next = "5.0.2"