[package]
name = "screenshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
sysinfo = "0.23.4"
clap = { version = "3.1.3", features = ["derive"] }
tungstenite = "0.17.2"
tiny_http = "0.11"
linuxfb = "0.2.0"